# sui-move-interface-extractor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benchmark/: .env.example  .gitignore  .tmp_mock_extractor.sh  A2A_GETTING_STARTED.md  GETTING_STARTED.md  QUICKSTART.md  README.md  models.yaml  pyproject.toml
benchmark/.docker_test_corpus/: manifest.txt
benchmark/docs/: A2A_EXAMPLES.md  A2A_TUNING.md  ARCHITECTURE.md  IMPROVEMENTS.md  METHODOLOGY.md  OPENROUTER_INTEGRATION_PLAN.md  OPENROUTER_QUICKSTART.md  TESTING.md  evaluation_bundle.schema.json
benchmark/fixtures/: dev_inspect_example.json
benchmark/manifests/: README.md  failure_retry_sample.txt  standard_phase2_no_framework.txt
benchmark/results/: README.md
benchmark/scenario_smi/: .scenario_pids.json  green_agent_card.toml  purple_agent_card.toml  scenario.toml
benchmark/scripts/: compare_models.sh  filter_packages_by_hit_rate.py  generate_dataset_packages_with_keys.sh  generate_top25_dataset.py  lint.sh  phase1_analyze.py  phase1_status.py  phase2_metrics.py  phase2_status.py  run_model.sh  run_multi_model.sh  run_phase1_until_done.sh  run_phase2_manifest_batches.sh  test_doc_examples.py  validate_crossrefs.py
benchmark/tests/: README.md  test_a2a_agent_logic.py  test_a2a_enhancements.py  test_a2a_green_agent.py  test_a2a_preflight.py  test_a2a_purple_agent.py  test_a2a_smoke_config.py  test_checkpoint_compatibility.py  test_cli.py  test_compiler_loop.py  test_dataset.py  test_dataset_integration.py  test_datasets.py  test_doc_steps.py  test_utils.py  (+23 more)
(+94 files in other folders)
